--- a/sample-transformers/xslt-identity-input-transformer/pom.xml
+++ b/sample-transformers/xslt-identity-input-transformer/pom.xml
@@ -18,7 +18,7 @@
 
     <parent>
         <artifactId>sample-transformers</artifactId>
-        <groupId>ddf.sdk</groupId>
+        <groupId>ddf.distribution</groupId>
         <version>2.8.0-SNAPSHOT</version>
     </parent>
 
@@ -27,7 +27,6 @@
         <osgi.version>4.3.1</osgi.version>
     </properties>
 
-    <groupId>ddf.sdk.sample.transformers</groupId>
     <artifactId>xslt-identity-input-transformer</artifactId>
     <name>DDF :: SDK :: Sample Transformers :: XSLT Identity Input Transformer</name>
     <packaging>bundle</packaging>
