DDF-1373 Pom file version cleanup from repo merges
- This fixes further version issues and starts the cleanup process on properties
- Adds a missing entry to .gitignore
- Removes the .travis.yml file as it is no longer needed

--- a/ddf-sso-query-widget/pom.xml
+++ b/ddf-sso-query-widget/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${ddf.catalog.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jasig.cas</groupId>
@@ -51,17 +51,17 @@
         <dependency>
             <groupId>ddf.security.core</groupId>
             <artifactId>security-core-api</artifactId>
-            <version>${ddf.platform.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.security.core</groupId>
             <artifactId>security-core-impl</artifactId>
-            <version>${ddf.security.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.security.cas</groupId>
             <artifactId>security-cas-impl</artifactId>
-            <version>${ddf.security.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
