--- a/sample-plugins/pom.xml
+++ b/sample-plugins/pom.xml
@@ -34,13 +34,13 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${ddf.catalog.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>filter-proxy</artifactId>
-            <version>${ddf.catalog.app.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
