--- a/sample-soap-endpoint/pom.xml
+++ b/sample-soap-endpoint/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>ddf.security.core</groupId>
             <artifactId>security-core-impl</artifactId>
-            <version>2.8.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
