--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>ddf</groupId>
         <artifactId>distribution</artifactId>
-        <version>2.8.0-SNAPSHOT</version>
+        <version>2.8.0</version>
     </parent>
 
     <groupId>ddf.distribution</groupId>
