--- a/sample-transformers/pom.xml
+++ b/sample-transformers/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <artifactId>sdk</artifactId>
     <groupId>ddf.distribution</groupId>
-    <version>2.8.0-SNAPSHOT</version>
+    <version>2.8.0</version>
   </parent>
   
   <artifactId>sample-transformers</artifactId>
