--- a/sample-transformers/xslt-identity-input-transformer/pom.xml
+++ b/sample-transformers/xslt-identity-input-transformer/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sample-transformers</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.8.0</version>
+        <version>2.8.1-SNAPSHOT</version>
     </parent>
 
     <properties>
