--- a/sdk-app/pom.xml
+++ b/sdk-app/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <artifactId>sdk</artifactId>
     <groupId>ddf.distribution</groupId>
-    <version>2.8.0</version>
+    <version>2.8.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>sdk-app</artifactId>
