--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>sample-metrics</module>
         <module>sample-soap-endpoint</module>
         <module>sample-metacard-filter</module>
+        <module>sample-cometd</module>
         <module>sdk-app</module>
     </modules>
 
