--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>sample-rest-endpoint</module>
         <module>sample-metacard-filter</module>
         <module>sample-cometd</module>
+        <module>sample-metacard-validator</module>
         <module>sdk-app</module>
     </modules>
 
