--- a/sample-rest-endpoint/pom.xml
+++ b/sample-rest-endpoint/pom.xml
@@ -12,23 +12,18 @@
  *
  **/
 -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
         <version>2.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <name>DDF :: SDK :: REST Endpoint</name>
     <artifactId>sample-rest-endpoint</artifactId>
-
     <packaging>
         bundle
     </packaging>
-
     <build>
         <plugins>
             <plugin>
@@ -60,5 +55,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
