--- a/pom.xml
+++ b/pom.xml
@@ -12,22 +12,17 @@
  *
  **/
 -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>ddf</groupId>
         <artifactId>distribution</artifactId>
         <version>2.9.0-SNAPSHOT</version>
     </parent>
-
     <groupId>ddf.distribution</groupId>
     <artifactId>sdk</artifactId>
     <packaging>pom</packaging>
     <name>DDF SDK</name>
-
     <modules>
         <module>sample-plugins</module>
         <module>sample-transformers</module>
@@ -40,7 +35,6 @@
         <module>sample-metacard-validator</module>
         <module>sdk-app</module>
     </modules>
-
     <repositories>
         <repository>
             <id>codice</id>
@@ -48,7 +42,6 @@
             <url>http://artifacts.codice.org/content/groups/public/</url>
         </repository>
     </repositories>
-
     <build>
         <pluginManagement>
             <plugins>
