--- a/sample-metrics/pom.xml
+++ b/sample-metrics/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <!--
 /**
  * Copyright (c) Codice Foundation
@@ -13,38 +14,30 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
         <version>2.9.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>sample-metrics</artifactId>
     <name>DDF :: SDK :: Metrics :: SampleMetrics</name>
     <packaging>bundle</packaging>
-
-
     <dependencies>
-
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>filter-proxy</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.codahale.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>3.0.1</version>
         </dependency>
-
         <dependency>
             <groupId>ddf.metrics.collector</groupId>
             <artifactId>metrics-collector</artifactId>
@@ -55,8 +48,6 @@
             <artifactId>rrd4j</artifactId>
         </dependency>
     </dependencies>
-
-
     <build>
         <plugins>
             <!-- The maven-bundle-plugin is required for this artifact to be an OSGi bundle. -->
@@ -73,8 +64,7 @@
                             rrd4j;scope=compile|runtime;artifactId=!slf4j-api
                         </Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
-                        <Import-Package>
-                            <!-- START: imports specific for embedding rrd4j -->
+                        <Import-Package><!-- START: imports specific for embedding rrd4j -->
                             !com.mongodb,
                             !com.sleepycat.je,
                             sun.misc;resolution:=optional,
@@ -83,7 +73,7 @@
                             <!-- END: imports specific for embedding rrd4j -->
                             *
                         </Import-Package>
-                        <Export-Package />
+                        <Export-Package/>
                     </instructions>
                 </configuration>
             </plugin>
@@ -93,5 +83,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
