--- a/sample-transformers/pom.xml
+++ b/sample-transformers/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <!--
 /**
  * Copyright (c) Codice Foundation
@@ -12,20 +13,16 @@
  **/
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <artifactId>sdk</artifactId>
-    <groupId>ddf.distribution</groupId>
-    <version>2.9.0-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>sample-transformers</artifactId>
-  <packaging>pom</packaging>
-  <name>DDF SDK Sample Transformers</name>
-  
-  <modules>
-    <module>xslt-identity-input-transformer</module>
-  </modules>
-  
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>sdk</artifactId>
+        <groupId>ddf.distribution</groupId>
+        <version>2.9.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>sample-transformers</artifactId>
+    <packaging>pom</packaging>
+    <name>DDF SDK Sample Transformers</name>
+    <modules>
+        <module>xslt-identity-input-transformer</module>
+    </modules>
 </project>
