--- a/sample-transformers/xslt-identity-input-transformer/pom.xml
+++ b/sample-transformers/xslt-identity-input-transformer/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <!--
 /**
  * Copyright (c) Codice Foundation
@@ -13,21 +14,17 @@
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>sample-transformers</artifactId>
         <groupId>ddf.distribution</groupId>
         <version>2.9.0-SNAPSHOT</version>
     </parent>
-
     <properties>
         <osgi.version>4.3.1</osgi.version>
     </properties>
-
     <artifactId>xslt-identity-input-transformer</artifactId>
     <name>DDF :: SDK :: Sample Transformers :: XSLT Identity Input Transformer</name>
     <packaging>bundle</packaging>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -67,7 +64,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -81,12 +77,10 @@
                     </instructions>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
-
 </project>
