DDF-1814 refactor extendable classes out of security-core-impl to ddd-security-common remove embedded guava and upgrade to 18.0 remove embedded validation-api and use an imported bundle instead create a separate feature for common-libraries fix woodstock dependencies

--- a/ddf-sso-query-widget/pom.xml
+++ b/ddf-sso-query-widget/pom.xml
@@ -54,8 +54,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.security.core</groupId>
-            <artifactId>security-core-impl</artifactId>
+            <groupId>ddf.security</groupId>
+            <artifactId>ddf-security-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -78,6 +78,21 @@
             <artifactId>platform-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util-unavailableurls</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -98,7 +113,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Embed-Dependency>
-                            catalog-core-api-impl;scope=!test
+                            catalog-core-api-impl;scope=!test,ddf-security-common,platform-util-unavailableurls
                         </Embed-Dependency>
                         <Export-Package>
                             ddf.sso.widget;version=${project.version}
