--- a/sample-soap-endpoint/pom.xml
+++ b/sample-soap-endpoint/pom.xml
@@ -40,7 +40,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.security.core</groupId>
-            <artifactId>security-core-impl</artifactId>
+            <artifactId>security-core-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
