DDF-1722: added missing dependencies.

--- a/sdk-app/pom.xml
+++ b/sdk-app/pom.xml
@@ -114,5 +114,10 @@
             <artifactId>sample-rest-endpoint</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.codice.ddf.sdk.validation.metacard</groupId>
+            <artifactId>sdk-sample-metacard-validator</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
