--- a/sample-metacard-filter/pom.xml
+++ b/sample-metacard-filter/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>catalog-core-api-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -45,7 +50,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
-                            catalog-core-api-impl
+                            catalog-core-api-impl,platform-util
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
