--- a/sample-metacard-validator/pom.xml
+++ b/sample-metacard-validator/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>catalog-core-api-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -51,7 +56,8 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
                         <Embed-Dependency>
-                            catalog-core-api-impl
+                            catalog-core-api-impl,
+                            platform-util
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
