DDF-2025 - updated ActionProvider to return a List of Actions. Added … (#703)
* DDF-2025 - updated ActionProvider to return a List of Actions. Added DerivedContentActionProvider for derived content items.

* DDF-2025 - updated catalog-app features to remove circular dependencies

* DDF-2025 - fixed ContentItemImpl to remove '-' from the UUID

* DDF-2025 - added null/empty list checking

* DDF-2025 - changed 'options' to 'qualifier' to be consistent everywhere

* DDf-2025 - updated docs

* DDF-2025 - updated CacheKey to account for derived content items

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>sample-metacard-filter</module>
         <module>sample-cometd</module>
         <module>sample-metacard-validator</module>
+        <module>sample-storageplugins</module>
         <module>sdk-app</module>
     </modules>
     <repositories>
