DDF-2032 adds a federated source for Twitter using OAuth2 (#694)

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>sample-cometd</module>
         <module>sample-metacard-validator</module>
         <module>sample-storageplugins</module>
+        <module>sample-twitter-source</module>
         <module>sdk-app</module>
     </modules>
     <repositories>
