--- a/sample-cometd/java-cli-example/pom.xml
+++ b/sample-cometd/java-cli-example/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>sample-cometd</artifactId>
         <groupId>ddf.distribution.sdk</groupId>
-        <version>2.9.0-SNAPSHOT</version>
+        <version>2.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>ddf.distribution.sdk.sample-cometd</groupId>
             <artifactId>cometd-java-example</artifactId>
-            <version>2.9.0-SNAPSHOT</version>
+            <version>2.9.0</version>
         </dependency>
         <!--this is just to replace the 4.0 version excluded above it is supposedly binary compatible-->
         <dependency>
