--- a/sample-cometd/pom.xml
+++ b/sample-cometd/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.9.0</version>
+        <version>2.9.1-SNAPSHOT</version>
     </parent>
 
     <groupId>ddf.distribution.sdk</groupId>
