--- a/sample-metrics/pom.xml
+++ b/sample-metrics/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.9.0</version>
+        <version>2.9.1-SNAPSHOT</version>
     </parent>
     <artifactId>sample-metrics</artifactId>
     <name>DDF :: SDK :: Metrics :: SampleMetrics</name>
