DDF-2173 upgrade dependencies to fix OWASP findings (#925)

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
         <module>sample-twitter-source</module>
         <module>sdk-app</module>
     </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons-collections.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <pluginManagement>
             <plugins>
