DDF-2292 Fixed sdk-app redeploy issue by switching the packaging to pom (#1048)

--- a/sdk-app/pom.xml
+++ b/sdk-app/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     <artifactId>sdk-app</artifactId>
     <name>DDF :: SDK :: App</name>
-    <packaging>kar</packaging>
+    <packaging>pom</packaging>
     <build>
         <plugins>
             <plugin>
