DDF-2993 Added MessageBrokerTest as part of test suite (#1967)
* DDF-2993 added MessageBrokerTest as part of test suite

* DDF-2993 Grouped ports

* DDF-2993 Revert ports

* DDF-2993 Removed unused array

* DDF-2993 Removed AbstractIntegrationTest call

* DDF-2993 Setting DynamicPorts in TestMessageBroker

* DDF-2993 Revert MessageBroker ports

* DDF-2993 Revert port number in TestRegistry

* DDF-2993 Removed broker-app from features.xml

* DDF-2993 Fixed TestMessageBroker results

* DDF-2993 Update camel version

* DDF-2993 Fixed pom in SDK

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <packaging>pom</packaging>
     <name>DDF SDK</name>
     <modules>
+        <module>artemis-sandbox</module>
         <module>sample-plugins</module>
         <module>sample-transformers</module>
         <module>ddf-sso-widget</module>
