--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>sample-metacard-validator</module>
         <module>sample-storageplugins</module>
         <module>sample-twitter-source</module>
+        <module>sample-process</module>
         <module>sdk-app</module>
     </modules>
     <dependencyManagement>
