--- a/ddf-sso-query-widget/pom.xml
+++ b/ddf-sso-query-widget/pom.xml
@@ -44,9 +44,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jasig.cas</groupId>
+            <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
-            <version>3.1.10</version>
+            <version>${cas.client.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.security.core</groupId>
