--- a/ddf-sso-widget/pom.xml
+++ b/ddf-sso-widget/pom.xml
@@ -35,9 +35,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jasig.cas</groupId>
+            <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
-            <version>3.1.10</version>
+            <version>${cas.client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
