--- a/artemis-sandbox/pom.xml
+++ b/artemis-sandbox/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-sjms</artifactId>
+            <artifactId>camel-sjms2</artifactId>
             <version>${camel.version}</version>
         </dependency>
         <dependency>
