--- a/artemis-sandbox/pom.xml
+++ b/artemis-sandbox/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>ddf.distribution</groupId>
         <artifactId>sdk</artifactId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <groupId>org.codice.ddf.broker</groupId>
     <artifactId>artemis-sandbox</artifactId>
