--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,97 @@
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
+     <parent>
         <groupId>ddf</groupId>
         <artifactId>distribution</artifactId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.17.0</version>
     </parent>
     <groupId>ddf.distribution</groupId>
     <artifactId>sdk</artifactId>
     <packaging>pom</packaging>
     <name>DDF SDK</name>
+    <version>2.18.0</version>
+      <inceptionYear>2019</inceptionYear>
+    <organization>
+        <name>Codice Foundation</name>
+        <url>http://codice.org</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public v3</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+   
+    <properties>
+        <!--  default URL properties -->
+        <codice.scm.connection.url />
+        <snapshots.repository.url />
+        <reports.repository.url />
+        <ddf.version>2.17.0</ddf.version>
+        <camel.version>2.22.1</camel.version>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+
+        <jsr305.version>3.0.2_1</jsr305.version>
+
+        <junit.version>4.12</junit.version>
+
+        <!-- Gitflow Incremental Builder Properties -->
+        <gib.referenceBranch>refs/remotes/origin/master</gib.referenceBranch>
+        <gib.baseBranch>HEAD</gib.baseBranch>
+        <gib.enabled>false</gib.enabled>
+        <gib.failOnError>false</gib.failOnError>
+
+        <!-- Maven Plugin Version Properties -->
+        <directory-maven-plugin.version>0.3.1</directory-maven-plugin.version>
+        <dependency-check-maven.version>3.1.1</dependency-check-maven.version>
+        <maven-jacoco-plugin.version>0.8.2</maven-jacoco-plugin.version>
+    </properties>
+
+    <scm>
+        <url>https://github.com/codice/ddf-sdk</url>
+        <connection>scm:git:https://github.com/codice/ddf-sdk.git</connection>
+        <developerConnection>scm:git:https://github.com/codice/ddf-sdk.git
+        </developerConnection>
+    </scm>
+
+    <distributionManagement>
+        <!--
+	    NOTE: The properties snapshots.repository.url and releases.repository.url should be defined in your .m2/settings.xml file.
+	-->
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>${snapshots.repository.url}</url>
+        </snapshotRepository>
+        <repository>
+            <id>releases</id>
+            <url>${releases.repository.url}</url>
+        </repository>
+        <site>
+            <id>reports</id>
+            <url>${reports.repository.url}</url>
+        </site>
+    </distributionManagement>
+      <repositories>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>codice</id>
+            <name>Codice Repository</name>
+            <url>https://artifacts.codice.org/content/groups/public/</url>
+        </repository>
+    </repositories>
     <modules>
         <module>artemis-sandbox</module>
         <module>sample-plugins</module>
