--- a/sample-metacard-validator/pom.xml
+++ b/sample-metacard-validator/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -29,17 +29,17 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
