--- a/sample-metrics/pom.xml
+++ b/sample-metrics/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <artifactId>sample-metrics</artifactId>
     <name>DDF :: SDK :: Metrics :: SampleMetrics</name>
@@ -26,12 +26,12 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>filter-proxy</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.codahale.metrics</groupId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>ddf.metrics.collector</groupId>
             <artifactId>metrics-collector</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.rrd4j</groupId>
