--- a/sample-plugins/pom.xml
+++ b/sample-plugins/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <artifactId>sample-plugins</artifactId>
     <name>DDF :: SDK :: Plugin :: SamplePlugins</name>
@@ -26,22 +26,22 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>filter-proxy</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
     </dependencies>
     <build>
