--- a/sample-transformers/xslt-identity-input-transformer/pom.xml
+++ b/sample-transformers/xslt-identity-input-transformer/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sample-transformers</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <properties>
         <osgi.version>4.3.1</osgi.version>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-camelcomponent</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
