--- a/sample-twitter-source/pom.xml
+++ b/sample-twitter-source/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.twitter4j</groupId>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-commons</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
             <!-- There is a conflict between geotools (specifically gt-xsd-filter)
                 and jscience. Since there is no direct dependency on jscience, rather
                 it calls methods in commons-ddf that use jscience, we can add an exclusion
@@ -61,12 +61,12 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>filter-proxy</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
     </dependencies>
 
