--- a/sdk-app/pom.xml
+++ b/sdk-app/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <artifactId>sdk</artifactId>
         <groupId>ddf.distribution</groupId>
-        <version>2.18.0-SNAPSHOT</version>
+        <version>2.18.0</version>
     </parent>
     <artifactId>sdk-app</artifactId>
     <name>DDF :: SDK :: App</name>
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>ddf.catalog.security</groupId>
             <artifactId>catalog-security-filter</artifactId>
-            <version>${project.version}</version>
+            <version>${ddf.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.distribution</groupId>
