--- a/artemis-sandbox/pom.xml
+++ b/artemis-sandbox/pom.xml
@@ -18,12 +18,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ddf.distribution</groupId>
         <artifactId>sdk</artifactId>
+        <groupId>org.codice</groupId>
         <version>2.18.0</version>
     </parent>
     <groupId>org.codice.ddf.broker</groupId>
     <artifactId>artemis-sandbox</artifactId>
+    <properties>
+      <netty.version>4.1.24.Final</netty.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -53,7 +56,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-client</artifactId>
-            <version>${artemis.version}</version>
+            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
