--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,7 @@
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-     <parent>
-        <groupId>ddf</groupId>
-        <artifactId>distribution</artifactId>
-        <version>2.17.0</version>
-    </parent>
-    <groupId>ddf.distribution</groupId>
+    <groupId>org.codice</groupId>
     <artifactId>sdk</artifactId>
     <packaging>pom</packaging>
     <name>DDF SDK</name>
@@ -42,7 +37,7 @@
         <codice.scm.connection.url />
         <snapshots.repository.url />
         <reports.repository.url />
-        <ddf.version>2.17.0</ddf.version>
+        <ddf.version>2.18.0</ddf.version>
         <camel.version>2.22.1</camel.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -63,6 +58,14 @@
         <directory-maven-plugin.version>0.3.1</directory-maven-plugin.version>
         <dependency-check-maven.version>3.1.1</dependency-check-maven.version>
         <maven-jacoco-plugin.version>0.8.2</maven-jacoco-plugin.version>
+        <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+
+        <!-- Command line argument properties for the maven-surefire-plugin -->
+        <surefire.argline.append />
+        <surefire.argline>${jacoco.argline} ${surefire.argline.append} -Xmx1024m -Djava.awt.headless=true -noverify</surefire.argline>
+        <failsafe.argline>${jacoco.argline}</failsafe.argline>
     </properties>
 
     <scm>
@@ -119,21 +122,50 @@
         <module>sample-process</module>
         <module>sdk-app</module>
     </modules>
+    <dependencies>
+      <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
-                <version>${commons-collections.version}</version>
+                <version>3.2.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
         <pluginManagement>
             <plugins>
+             <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>${surefire.argline}</argLine>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <includes>
+                            <include>**/*Test.java</include>
+                            <include>**/*Spec.class</include>
+                        </includes>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                     <dependencies>
+                        <dependency>
+                            <groupId>org.codice.maven</groupId>
+                            <artifactId>jacoco</artifactId>
+                            <version>0.2</version>
+                        </dependency>
+                    </dependencies>
                     <executions>
                         <execution>
                             <id>default-check</id>
@@ -173,6 +205,19 @@
                     <artifactId>dependency-check-maven</artifactId>
                     <configuration>
                         <skip>true</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <!-- Disabled OBR to increase build speed -->
+                        <obrRepository>NONE</obrRepository>
+                        <instructions>
+                            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        </instructions>
                     </configuration>
                 </plugin>
             </plugins>
