--- a/sample-storageplugins/pom.xml
+++ b/sample-storageplugins/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>sdk</artifactId>
-        <groupId>ddf.distribution</groupId>
+        <groupId>org.codice</groupId>
         <version>2.18.0</version>
     </parent>
     <groupId>ddf.distribution.sdk</groupId>
